--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,8 @@
 const today = new Date();
 ---
 
-<footer>
-	&copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
+<footer class="text-zinc-500 p-4 text-center">
+	&copy; {today.getFullYear()} <a href="https://vk.com/a_common_one">Владимир Евсиков</a>. Все права защищены.
 </footer>
 <style>
 	footer {
