--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 ---
 
 <footer class="text-zinc-500 p-4 text-center">
-	&copy; {today.getFullYear()} <a href="https://vk.com/a_common_one">Владимир Евсиков</a>. Все права защищены.
+	Данный ресурс не является официальным информационным каналом МТУСИ и несёт исключительно ознакомительный и развлекательный характер.<br>&copy; {today.getFullYear()} <a href="https://vk.com/a_common_one">Владимир Евсиков</a>. Все права защищены.
 </footer>
 <style>
 	footer {
