--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import { Image } from '@astrojs/image/components'
 
 const posts = (await Astro.glob('./posts/*.md')).sort(
   (a: any, b: any) =>
-    new Date(b.frontmatter.pubDate).valueOf() - new Date(a.frontmatter.pubDate).valueOf()
+    new Date(b.frontmatter.createdAt).valueOf() - new Date(a.frontmatter.createdAt).valueOf()
 )
 ---
 
@@ -32,7 +32,7 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
                 <ul class="grid grid-cols-1 md:grid-cols-2 gap-4">{
                     posts.map(post => (
                         <li class="text-center mb-4">
-                         <Image class="border border-slate-300 dark:border-zinc-700 rounded-xl" src={post.frontmatter.heroImage} width={720*2} aspectRatio={2.0} alt="Thumbnail" />
+                         <Image class="border border-slate-300 dark:border-zinc-700 rounded-xl" src={post.frontmatter.heroImage} width={720*2} aspectRatio={2.0} alt="Картиночка" />
                          <a href={post.url}>
                             <div class="mt-3 text-xl">{post.frontmatter.title}</div>
                             <div class="opacity-70">{post.frontmatter.description}</div>
