--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,7 @@ import HeaderLink from './HeaderLink.astro';
 import ThemeToggle from './ThemeToggleButton';
 import { SITE_TITLE, HOMEPAGE_URL } from '../config';
 import DropdownMenu from './DropdownMenu';
+import MtuciIcon from './icons/mtuci';
 ---
 
 <header class="fixed w-full p-2 z-20 backdrop-blur-md">
@@ -10,6 +11,7 @@ import DropdownMenu from './DropdownMenu';
     <nav class="flex items-center gap-3 text-base">
         <a href="/" class="group">
             <h2 class="font-semibold tracking-tighter p-2 font-mplus text-lg">
+            <MtuciIcon />
             АЗ МТУСИ
             </h2>
         </a>
