--- a/src/components/Masthead.astro
+++ b/src/components/Masthead.astro
@@ -5,7 +5,7 @@
 <div class="z-10 text-center px-8 drop-shadow-lg shadow-black">
     <div class="uppercase text-sm mb-4">Всё, что надо знать</div>
     <div class="text-4xl font-mplus font-medium">
-     Об актовом зале <span class="text-purple-500">МТУСИ</span>
+     Об актовом зале <a href=https://mtuci.ru><span class="text-purple-500">МТУСИ</span></a>
     </div>
 </div>
 </section>
