--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,16 +23,16 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
 		<Header title={SITE_TITLE} />
 		<main class="pt-[56px]">
             <Masthead />
-            <h1 class="font-mplus text-center mb-5">Здесь Вы можете узнать всю исчерпывающую информацию об актовом зале МТУСИ.</h1>
+            <h1 class="font-mplus text-center mb-5">Здесь Вы можете узнать всю интересующую Вас информацию об актовом зале МТУСИ.</h1>
             <Content>
                 <section>
                 </section>
                 <section>
                 <ul class="grid grid-cols-1 md:grid-cols-2 gap-4">{
                     posts.map(post => (
+                        <a href={post.url}>
                         <li class="text-center mb-5">
                          <Image class="border border-slate-300 dark:border-zinc-700 rounded-xl" src={post.frontmatter.heroImage} width={720*2} aspectRatio={2.0} alt="Картиночка" />
-                         <a href={post.url}>
                             <div class="mt-3 text-xl">{post.frontmatter.title}</div>
                             <div class="opacity-70">{post.frontmatter.description}</div>
                         </a>
