--- a/src/components/Masthead.astro
+++ b/src/components/Masthead.astro
@@ -1,9 +1,9 @@
-<section class="relative mb-6 h-80 flex justify-center items-center">
+<section class="relative mb-5 h-80 flex justify-center items-center">
 <div class="absolute w-full h-full overflow-hidden">
-    <img src="/masthead.jpg" class="absolute inset-0 min-w-full min-h-full object-cover opacity-25">
+    <img src="/masthead.jpg" class="absolute inset-0 min-w-full min-h-full object-cover opacity-40">
 </div>
 <div class="z-10 text-center px-8 drop-shadow-lg shadow-black">
-    <div class="uppercase text-sm mb-4">Всё, что надо знать</div>
+    <div class="uppercase text-xl mb-4">Всё, что надо знать</div>
     <div class="text-4xl font-mplus font-medium">
      Об актовом зале <a href=https://mtuci.ru><span class="text-purple-500">МТУСИ</span></a>
     </div>
