--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const today = new Date();
 ---
 
-<footer class="text-zinc-500 p-4 text-center">
+<footer class="text-zinc-500 p-4 text-center mx-auto max-w-6xl">
 	Данный ресурс не является официальным информационным каналом МТУСИ и несёт исключительно ознакомительный и развлекательный характер.<br>&copy; {today.getFullYear()} <a href="https://vk.com/a_common_one">Владимир Евсиков</a>. Все права защищены.
 </footer>
 <style>
